fix (Header): Align logo with other content

--- a/assets/styles/refresh/components/_sparkeats-header.scss
+++ b/assets/styles/refresh/components/_sparkeats-header.scss
@@ -18,6 +18,6 @@
 
 @media screen and (min-width: $bp-med-screen) {
   .sparkeats-header__logo {
-    margin-left: 4em;
+    margin-left: 9vw;
   }
 }
